--- a/templates/reparacion.html
+++ b/templates/reparacion.html
@@ -18,7 +18,7 @@
     <div class="container">
       <h1 class="mt-5" style="margin-top: 6rem!important">Ups...</h1>
       <p class="lead">La página a la que quieres entrar se encuentra en reparación</p>
-      <p>Click <a href="/inicio">aquí </a> para regresar a inicio</p>
+      <p>Click <a href="/#">aquí </a> para regresar a inicio</p>
     </div>
   </main>
 
