Agregar función de ver servicios como recepcionista o gerente

--- a/templates/consultar_citas_gerente_recepcionista.html
+++ b/templates/consultar_citas_gerente_recepcionista.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Ver cita gerentes/recepcionista{% endblock %}
+{% block title %}Ver cita{% endblock %}
 {% block body %}
 
 <!doctype html>
