--- a/templates/info_cita_gerente_recepcionista.html
+++ b/templates/info_cita_gerente_recepcionista.html
@@ -5,86 +5,17 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-    <!-- Custom styles for this template -->
-    {#
-    <link href="informacion_cita.css" rel="stylesheet">#}
-</head>
+
 
 
 <body>
 
 
-    <main class="d-flex flex-nowrap">
+    <main class="d-flex flex-nowrap" style="display: flex; justify-content: center; align-items: center; margin-top: 2%" >
 
 
         <!--<div class="b-example-divider b-example-vr" style="margin-top: 4%;"></div>-->
 
-        <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px; margin-top: 4%;">
-            <a >
-                <span class="fs-4">Citas próximas</span>
-            </a>
-            <hr>
-            <ul class="nav nav-pills flex-column mb-auto">
-
-                {% for cita in lista_citas %}
-                <li class="nav-item">
-                    <a href="/informacion_cita/{{ cita['id_cita'] }}"
-                        class="nav-link {% if cita['id_cita']== dicc_cita['id_cita'] %}active{% else %} link-dark{% endif %}"
-                        aria-current="page">
-{#                        <svg class="bi pe-none me-2" width="16" height="16">#}
-{#                            <use xlink:href="#home"></use>#}
-{#                        </svg>#}
-                        Cita de {{ cita['nombre_servicio'] }} - {{ cita['fecha'] }}
-                    </a>
-                </li>
-                {% endfor %}
-                <!--
-                <li>
-                    <a href="#" class="nav-link link-dark">
-                        <svg class="bi pe-none me-2" width="16" height="16">
-                            <use xlink:href="#speedometer2"></use>
-                        </svg>
-                        Cita de peinado
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link link-dark">
-                        <svg class="bi pe-none me-2" width="16" height="16">
-                            <use xlink:href="#table"></use>
-                        </svg>
-                        Cita de facial
-                    </a>
-                </li>
-                -->
-
-            <hr>
-            <a >
-                <span class="fs-4">Citas pasadas</span>
-            </a>
-
-            </ul>
-
-            
-            
-
-            <!--<div class="dropdown">
-                <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-                    <strong>mdo</strong>
-                </a>
-                <ul class="dropdown-menu text-small shadow">
-                    <li><a class="dropdown-item" href="#">New project...</a></li>
-                    <li><a class="dropdown-item" href="#">Settings</a></li>
-                    <li><a class="dropdown-item" href="#">Profile</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
-                </ul>
-            </div>-->
-        </div>
 
 
 
