--- a/templates/informacion_servicio.html
+++ b/templates/informacion_servicio.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}información de cita{% endblock %}
+{% block title %}información de servicio{% endblock %}
 
 {% block body %}
 <!doctype html>
@@ -22,20 +22,20 @@
 
         <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px; margin-top: 4%;">
             <a >
-                <span class="fs-4">Citas próximas</span>
+                <span class="fs-4">Servicios disponibles</span>
             </a>
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
 
-                {% for cita in lista_citas %}
+                {% for servicio in lista_servicios %}
                 <li class="nav-item">
-                    <a href="/informacion_cita/{{ cita['id_cita'] }}"
-                        class="nav-link {% if cita['id_cita']== dicc_cita['id_cita'] %}active{% else %} link-dark{% endif %}"
+                    <a href="/informacion_servicio/{{ servicio['id_servicio'] }}"
+                        class="nav-link {% if servicio['id_servicio']== info_servicio['id_servicio'] %}active{% else %} link-dark{% endif %}"
                         aria-current="page">
 {#                        <svg class="bi pe-none me-2" width="16" height="16">#}
 {#                            <use xlink:href="#home"></use>#}
 {#                        </svg>#}
-                        Cita de {{ cita['nombre_servicio'] }} - {{ cita['fecha'] }}
+                        Cita de {{ servicio['nombre'] }}
                     </a>
                 </li>
                 {% endfor %}
@@ -58,10 +58,7 @@
                 </li>
                 -->
 
-            <hr>
-            <a >
-                <span class="fs-4">Citas pasadas</span>
-            </a>
+
 
             </ul>
 
@@ -90,54 +87,52 @@
 
 
         <div class="col-md-7 col-lg-8" style="margin-top: 10%">
-            <form class="needs-validation" novalidate>
+            <form class="needs-validation" method="POST">
                 <div class="row g-3" style="padding-left: 7%; padding-top: 0%; margin-top: -9%;">
 
                     <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm" style="background-color:  #7CB8EB">
                         <img class="me-3" src="/static/images/calendario_fecha_cita.png" alt="" width="48" height="48">
                         <div class="lh-1">
-                            <h1 class="h6 mb-0 text-white lh-1">SUCURSAL: LAS LOMAS</h1>
-                            <small>Avenida villa de seris</small>
-                            <small>/</small>
-                            <small>+552 6621284028</small>
+                            <h1 class="h6 mb-0 text-white lh-1">Información de {{ info_servicio['nombre'] }}</h1>
+
                         </div>
                     </div>
 
 
 
-
+                    <div class="col-12">
+                        <label for="nombre" class="form-label">Nombre de servicio</label>
+                        <input type="text" class="form-control" id="nombre" name="nombre" value="{{ info_servicio['nombre'] }}"  required>
+                    </div>
 
                     <div class="col-md-4">
-                        <label for="fecha" class="form-label">Fecha</label>
-                        <input style="all:unset;" type="text" class="form-control" id="fecha" value="{{ dicc_cita['fecha'] }}"
-                            disabled>
+                        <label for="precio" class="form-label">Precio:</label>
+                        <input  type="number" class="form-control" id="precio" name="precio" value="{{ info_servicio['precio'] }}"
+                            required>
                         <div class="invalid-feedback">
-                            Ingrese una fecha
+                            Ingrese el precio
                         </div>
                     </div>
 
                     <div class="col-md-3">
-                        <label for="hora" class="form-label">Hora (24h)</label>
-                        <input type="text" class="form-control" id="hora" placeholder="{{ dicc_cita['hora'] }}"
+                        <label for="tiempo" class="form-label">Tiempo de duración (minutos):</label>
+                        <input type="number" class="form-control" id="tiempo" name="tiempo" value="{{ info_servicio['tiempo'] }}"
                             required>
                         <div class="invalid-feedback">
-                            hora requerida.
+                            Ingrese el tiempo de duración
                         </div>
                     </div>
 
-                    <div class="col-12">
-                        <label for="total" class="form-label">Total (Pesos)</label>
-                        <input type="text" class="form-control" id="total" placeholder="" value="" required>
-                    </div>
+
 
                     <div class="mb-3">
                         <label for="exampleFormControlTextarea1" class="form-label">Descripción de servicio</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="descripcion" >{{ info_servicio['descripcion'] }}</textarea>
                     </div>
 
                     <hr>
 
-                    <p align="right"><a class="btn btn-lg btn-primary" href="">Editar cita</a></p>
+                    <p align="right"><button class="btn btn-lg btn-primary" type="submit" >Guardar cambios</button></p>
 
 
                 </div>
