--- a/static/css/registrarse.css
+++ b/static/css/registrarse.css
@@ -1,22 +1,48 @@
 body{
-    /*margin:0;*/
-    /*padding: 0;*/
+    /* margin: 0;
+    padding: 0;
     font-family: 'Montserrat';
-    background: linear-gradient(120deg, #cbe5f7,  #5b9ad1 ) ;
-    /*height: 100vh;*/
-    /*overflow: hidden;*/
+    background: linear-gradient(120deg, #cbe5f7, #5b9ad1 );
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center; */
+    font-family: 'Montserrat';
+    height: 100%;    
+    width: 100%;
+    margin: 0;
+    min-height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+html {
+    height: 100%;
+    min-height: 700px;
+    background: rgb(203,229,247);
+    background: linear-gradient(120deg, rgba(203,229,247,1) 35%, rgba(91,154,209,1) 100%);
+}
+
+.main-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .center{
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
     width: 400px;
     background: white;
     border-radius: 10px;
     max-width: -webkit-fill-available;
     max-height: 625px;
+    padding: 10px;
 }
 
 .center h1{
