--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,53 +11,55 @@
 </head>
 
 <body>
-
-    <div class="center">
-        <img src="/static/images/cleopatra.png" alt="" width="48" height="48">
-        <h1>Registrarse</h1>
-        <form method="post">
-            <div class="txt_field">
-                <input type="text" required></input>
-                <span></span>
-                <label>Nombre</label>
-            </div>
-
-            <div class="txt_field">
-                <input type="email" required></input>
-                <span></span>
-                <label>Email</label>
-            </div>
-
-            <div class="txt_field">
-                <input input type="tel" name="telephone" pattern="\([0-9]{3}\) [0-9]{3}[ -][0-9]{4}"
-                    title="A valid telephone number consist of a 3 digits code area between brackets, a space, the three first digits of the number, a space or hypen (-), and four more digits"
-                    required></input>
-                <span></span>
-                <label>Télefono</label>
-            </div>
-
-            <div class="txt_field">
-                <input type="password" required></input>
-                <span></span>
-                <label>Contraseña</label>
-            </div>
-
-            <div class="txt_field">
-                <input type="password" required></input>
-                <span></span>
-                <label>Repetir contraseña</label>
-            </div>
-
-
-            <input type="submit" value="Registrarse" required></input>
-
-            <div class="login_link">
-                ¿Ya estás registrado?
-                <a href="#">Ingresa sesión</a>
-            </div>
-
-        </form>
+    <div class="main-container">
+        <div class="center">
+            <img src="/static/images/cleopatra.png" alt="" width="48" height="48">
+            <h1>Registrarse</h1>
+            <form method="post">
+                <div class="txt_field">
+                    <input type="text" required></input>
+                    <span></span>
+                    <label>Nombre</label>
+                </div>
+    
+                <div class="txt_field">
+                    <input type="email" required></input>
+                    <span></span>
+                    <label>Email</label>
+                </div>
+    
+                <div class="txt_field">
+                    <input input type="tel" name="telephone" pattern="\([0-9]{3}\) [0-9]{3}[ -][0-9]{4}"
+                        title="A valid telephone number consist of a 3 digits code area between brackets, a space, the three first digits of the number, a space or hypen (-), and four more digits"
+                        required></input>
+                    <span></span>
+                    <label>Télefono</label>
+                </div>
+    
+                <div class="txt_field">
+                    <input type="password" required></input>
+                    <span></span>
+                    <label>Contraseña</label>
+                </div>
+    
+                <div class="txt_field">
+                    <input type="password" required></input>
+                    <span></span>
+                    <label>Repetir contraseña</label>
+                </div>
+    
+    
+                <input type="submit" value="Registrarse" required></input>
+    
+                <div class="login_link">
+                    ¿Ya estás registrado?
+                    <a href="/login">Ingresa sesión</a>
+                </div>
+    
+            </form>
+        </div>
     </div>
+    
 </body>
 
 
