--- a/templates/agendar_cita.html
+++ b/templates/agendar_cita.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Hora_cita{% endblock %}
+{% block title %}Agendar cita{% endblock %}
 
 {% block body %}
 <!doctype html>
