--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-  <link rel="icon" href="">
+  <link rel="icon" href="/static/images/cleopatra.png">
 </head>
 <html lang="en">
 
@@ -72,34 +72,33 @@
     }
   </style>
 
-  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
-  <title>Bootstrap Example</title>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 
 <header>
 
+
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
 
-     
-
-      <!--BOOSTRAP<img class="me-3" src="/static/images/cleopatra.png" alt="" width="30" height="30">-->
       <a class="navbar-brand" href="/#">
         <img src="/static/images/cleopatra.png" alt="Bootstrap" width="30" height="30">
         <a class="navbar-brand" href="/#">True Beauty</a>
       </a>
-      
-      
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
-        aria-controls="offcanvasDarkNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
+      <form class="d-flex">
+
+        <a class="btn btn-outline-light me-2" href="/login">Login</a>
+        <a class="btn btn-outline-light me-2" href="/signup">Sign-up</a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
+          aria-controls="offcanvasDarkNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+      </form>
 
       <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
         aria-labelledby="offcanvasDarkNavbarLabel">
@@ -108,18 +107,19 @@
           <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">True Beauty</h5>
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
             aria-label="Close"></button>
+
         </div>
 
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-          {% if accesos %}
-              {% for link,nombre in accesos.items() %}
-                 <li class="nav-item">
+            {% if accesos %}
+            {% for link,nombre in accesos.items() %}
+            <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{{ link }}">{{ nombre }}</a>
             </li>
-              {% endfor %}
-          {% endif %}
-<!--
+            {% endfor %}
+            {% endif %}
+
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/#">Home</a>
             </li>
@@ -145,10 +145,7 @@
               </ul>
 
             </li>
-              -->
           </ul>
-
-
         </div>
       </div>
     </div>
@@ -198,9 +195,7 @@
 <body>
   {% block body %}
   {% endblock %}
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+
 </body>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -210,7 +205,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="/static/js/funciones.js?n=1"></script>
+<script type="text/javascript" src="/static/js/funciones.js?n=1"></script>
 
 </body>
 
