--- a/templates/info_cita_gerente_recepcionista.html
+++ b/templates/info_cita_gerente_recepcionista.html
@@ -138,7 +138,10 @@
                     </div>
 
                     <hr>
-                <div style="display: flex; justify-content: space-between; padding-bottom: 3rem" ><a class="btn btn-lg btn-primary" href="/consultar_citas">Todas las citas</a> <button class="btn btn-lg btn-primary" type="submit">Editar cita</button></div>
+                <div style="display: flex; justify-content: space-between; padding-bottom: 3rem" >
+                    <a class="btn btn-lg btn-primary" href="/consultar_citas">Todas las citas</a>
+                    <button class="btn btn-lg btn-primary" type="submit">Editar cita</button>
+                </div>
 
 
 
