--- a/templates/signup.html
+++ b/templates/signup.html
@@ -52,8 +52,8 @@
                 <input type="submit" value="Registrarse" required></input>
     
                 <div class="login_link">
-                    ¿Ya estás registrado?
-                    <a href="/login">Ingresa sesión</a>
+                    ¿Ya te registraste?
+                    <a href="/login">Inicie sesión</a>
                 </div>
     
             </form>
