--- a/templates/informacion_cita.html
+++ b/templates/informacion_cita.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}información de cita{% endblock %}
+{% block title %}Información de cita{% endblock %}
 
 {% block body %}
 <!doctype html>
@@ -15,7 +15,7 @@
 <body>
 
 
-    <main class="d-flex flex-nowrap">
+    <main class="d-flex flex-nowrap" >
 
 
         <!--<div class="b-example-divider b-example-vr" style="margin-top: 4%;"></div>-->
@@ -25,20 +25,21 @@
                 <span class="fs-4">Citas próximas</span>
             </a>
             <hr>
-            <ul class="nav nav-pills flex-column mb-auto">
+            <ul style="margin-bottom:10%" class="nav nav-pills flex-column " >
 
                 {% for cita in lista_citas %}
+                    {% if fecha_actual <=  cita['fecha_datetime'] %}
                 <li class="nav-item">
                     <a href="/informacion_cita/{{ cita['id_cita'] }}"
                         class="nav-link {% if cita['id_cita']== dicc_cita['id_cita'] %}active{% else %} link-dark{% endif %}"
                         aria-current="page">
-{#                        <svg class="bi pe-none me-2" width="16" height="16">#}
-{#                            <use xlink:href="#home"></use>#}
-{#                        </svg>#}
-                        Cita de {{ cita['nombre_servicio'] }} - {{ cita['fecha'] }}
+
+                        {{ cita['fecha_escrita'] }} a las {{ cita['hora'] }} horas
                     </a>
                 </li>
+                    {% endif %}
                 {% endfor %}
+            </ul>
                 <!--
                 <li>
                     <a href="#" class="nav-link link-dark">
@@ -58,12 +59,27 @@
                 </li>
                 -->
 
-            <hr>
+
             <a >
                 <span class="fs-4">Citas pasadas</span>
             </a>
+<hr>
+            <ul class="nav nav-pills flex-column mb-auto">
 
+                {% for cita in lista_citas %}
+                    {% if fecha_actual >  cita['fecha_datetime'] %}
+                <li class="nav-item">
+                    <a href="/informacion_cita/{{ cita['id_cita'] }}"
+                        class="nav-link {% if cita['id_cita']== dicc_cita['id_cita'] %}active{% else %} link-dark{% endif %}"
+                        aria-current="page">
+
+                        {{ cita['fecha_escrita'] }} a las {{ cita['hora'] }}
+                    </a>
+                </li>
+                    {% endif %}
+                {% endfor %}
             </ul>
+
 
             
             
@@ -89,60 +105,126 @@
 
 
 
-        <div class="col-md-7 col-lg-8" style="margin-top: 10%">
+          <div class="col-md-7 col-lg-8" style="margin-top: 10%">
             <form class="needs-validation" novalidate>
                 <div class="row g-3" style="padding-left: 7%; padding-top: 0%; margin-top: -9%;">
 
                     <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm" style="background-color:  #7CB8EB">
                         <img class="me-3" src="/static/images/calendario_fecha_cita.png" alt="" width="48" height="48">
                         <div class="lh-1">
-                            <h1 class="h6 mb-0 text-white lh-1">SUCURSAL: LAS LOMAS</h1>
-                            <small>Avenida villa de seris</small>
-                            <small>/</small>
-                            <small>+552 6621284028</small>
+                            <h1 class="h6 mb-0 text-white lh-1">Cita en {{ dicc_cita['nombre_sucursal'] }}</h1>
+                            <small>El {{ dicc_cita['fecha'] }} a las {{ dicc_cita['hora'] }} horas</small>
+
                         </div>
                     </div>
-
 
 
 
 
                     <div class="col-md-4">
                         <label for="fecha" class="form-label">Fecha</label>
-                        <input style="all:unset;" type="text" class="form-control" id="fecha" value="{{ dicc_cita['fecha'] }}"
-                            disabled>
+                        <input  type="text" class="form-control" id="fecha" name="fecha" value="{{ dicc_cita['fecha'] }}"
+                            readonly>
                         <div class="invalid-feedback">
                             Ingrese una fecha
                         </div>
                     </div>
 
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <label for="hora" class="form-label">Hora (24h)</label>
-                        <input type="text" class="form-control" id="hora" placeholder="{{ dicc_cita['hora'] }}"
-                            required>
+                        <input type="text" class="form-control" id="hora" name="hora" value="{{ dicc_cita['hora'] }}"
+                            readonly>
+                        <div class="invalid-feedback">
+                            hora requerida.
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="hora" class="form-label">Hora de termino(24h)</label>
+                        <input type="text" class="form-control" id="hora" name="hora" value="{{ dicc_cita['hora_fin'] }}"
+                            readonly>
+                        <div class="invalid-feedback">
+                            hora requerida.
+                        </div>
+                    </div>
+                <div class="col-md-6">
+                        <label for="hora" class="form-label">Nombre de sucursal</label>
+                        <input type="text" class="form-control" id="hora" name="hora" value="{{ dicc_cita['nombre_sucursal'] }}"
+                            readonly>
+                        <div class="invalid-feedback">
+                            hora requerida.
+                        </div>
+                    </div>
+                <div class="col-md-6">
+                        <label for="hora" class="form-label">Dirección</label>
+                        <input type="text" class="form-control" id="hora" name="hora" value="{{ dicc_cita['direccion_sucursal'] }}"
+                            readonly>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
                     </div>
 
-                    <div class="col-12">
-                        <label for="total" class="form-label">Total (Pesos)</label>
-                        <input type="text" class="form-control" id="total" placeholder="" value="" required>
-                    </div>
+                    <h4 class="border-bottom pb-2 mb-0">Servicios a realizar</h4>
+                    <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Descripción</th>
+                        <th scope="col">Estilista</th>
+                        <th scope="col">Precio</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for servicio in dicc_cita['lista_servicios'] %}
+                     <tr>
+                        <th scope="row">{{ servicio['nombre_servicio'] }}</th>
+                        <td>{{ servicio['descripcion'] }}</td>
 
-                    <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">Descripción de servicio</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <td>{{ servicio['nombre_estilista'] }} {{ servicio['apellido1_estilista'] }}</td>
+                        <td>${{ servicio['precio'] }}</td>
+                    </tr>
+
+                {% endfor %}
+
+                </tbody>
+
+            </table>
+                    <div class="col-md-4">
+                        <label for="subtotal" class="form-label">Subtotal</label>
+                        <input type="number" class="form-control" id="subtotal" name="monto" value="{{ dicc_cita['monto'] }}"
+                            readonly>
+                        <div class="invalid-feedback">
+
+                        </div>
+                    </div>
+                <div class="col-md-4">
+                        <label for="iva" class="form-label">IVA</label>
+                        <input type="number" class="form-control" id="iva" name="iva" value="{{ dicc_cita['iva'] }}"
+                            readonly>
+                        <div class="invalid-feedback">
+
+                        </div>
+                    </div>
+                <div class="col-md-4">
+                        <label for="total" class="form-label">Total a pagar</label>
+                        <input type="number" class="form-control" id="total" name="total" value="{{ dicc_cita['total'] }}"
+                            readonly>
+                        <div class="invalid-feedback">
+                            hora requerida.
+                        </div>
                     </div>
 
                     <hr>
+                <div style="display: flex; justify-content: space-between; padding-bottom: 3rem" >
+                    <a class="btn btn-lg btn-primary" href="/consultar_citas">Todas las citas</a>
+                    <button class="btn btn-lg btn-primary" type="submit">Editar cita</button>
+                </div>
 
-                    <p align="right"><a class="btn btn-lg btn-primary" href="">Editar cita</a></p>
 
 
                 </div>
             </form>
         </div>
+
 
     </main>
     <script src="/docs/5.2/dist/js/bootstrap.bundle.min.js"
