--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
 <header>
 
 
-  <nav class="navbar navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-dark bg-dark fixed-top" style="position:fixed; margin-top: -20; display:block; width:100%;">
     <div class="container-fluid">
 
       <a class="navbar-brand" href="/#">
