Agregar Icono de pestaña a "login.html" y "Signup.html"

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,6 +4,7 @@
 <head>
     <meta charser="utf-8">
     <title>SignUp</title>
+    <link rel="icon" href="/static/images/cleopatra.png">
     <link rel="stylesheet" href="/static/css/registrarse.css">
     </link>
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Montserrat'>
