Arreglar seleccion de horas al momento de agendar cita

--- a/templates/escoger_cita.html
+++ b/templates/escoger_cita.html
@@ -65,6 +65,7 @@
           <div class="row g-3">
 
             <div class="col-12">
+                <h4>{{ get_flashed_messages()[0] }}</h4>
               <label for="comboListServicios" class="form-label">Tipo de servicio</label>
 
               <select id="comboListServicios" onchange="mostrarPrecio()" class="form-select" name="tipo_servicio"
