Arreglar logo de True Beauty en Navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -84,8 +84,8 @@
     <div class="container-fluid">
 
       <a class="navbar-brand" href="/#">
-        <img src="/static/images/cleopatra.png" alt="Bootstrap" width="30" height="30">
-        <a class="navbar-brand" href="/#">True Beauty</a>
+        <img src="/static/images/cleopatra.png"  width="30" height="30">
+        <a class="navbar-brand" href="/#" style="margin-right: auto;">True Beauty</a>
       </a>
 
       <form class="d-flex">
